使用parcel将button组件改为单文件组件

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
       font-size: var(--font-size);
     }
   </style>
-  <style>
-    .g-button {
-      font-size: var(--font-size);
-      height: var(--button-height);
-      padding: 0 1em;
-      border-radius: var(--border-radius);
-      border: 1px solid var(--border-color);
-      background: var(--button-bg);
-    }
-    .g-button:hover{
-      border-color: var(--border-color-hover);
-    }
-    .g-button:active{
-      background-color: var(--button-active-bg);
-    }
-    .g-button:focus{
-      outline: none;
-    }
-  </style>
+<!--  <style>-->
+<!--    .g-button {-->
+<!--      font-size: var(&#45;&#45;font-size);-->
+<!--      height: var(&#45;&#45;button-height);-->
+<!--      padding: 0 1em;-->
+<!--      border-radius: var(&#45;&#45;border-radius);-->
+<!--      border: 1px solid var(&#45;&#45;border-color);-->
+<!--      background: var(&#45;&#45;button-bg);-->
+<!--    }-->
+<!--    .g-button:hover{-->
+<!--      border-color: var(&#45;&#45;border-color-hover);-->
+<!--    }-->
+<!--    .g-button:active{-->
+<!--      background-color: var(&#45;&#45;button-active-bg);-->
+<!--    }-->
+<!--    .g-button:focus{-->
+<!--      outline: none;-->
+<!--    }-->
+<!--  </style>-->
 </head>
 <body>
 
