--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <span>Vue</span>
     </g-button>
 
-    <g-button icon="settings">
+    <g-button icon="settings" icon-position="up">
       <span>React</span>
     </g-button>
 
