将SVG代码整体为icon.vue组件

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
     <g-button icon="settings" icon-position="right">
       <span>JS</span>
     </g-button>
+    <svg>
+      <use xlink:href="#i-download"></use>
+    </svg>
+    <g-icon name="download"></g-icon>
   </div>
 
 <!--<script src="./node_modules/vue/dist/vue.min.js"></script>-->
