--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
       <use xlink:href="#i-download"></use>
     </svg>
     <g-icon name="download"></g-icon>
+
+    <div style="margin: 20px"></div>
+
+    <g-button-group>
+      <g-button icon="left">上一页</g-button>
+      <g-button>更多</g-button>
+      <g-button icon="right" icon-position="right">下一页</g-button>
+    </g-button-group>
   </div>
 
 <!--<script src="./node_modules/vue/dist/vue.min.js"></script>-->
