--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
       <g-button>更多</g-button>
       <g-button icon="right" icon-position="right">下一页</g-button>
     </g-button-group>
+
+    <g-button-group>
+      <div><g-button icon="left">上一页</g-button></div>
+      <g-button>更多</g-button>
+      <g-button icon="right" icon-position="right">下一页</g-button>
+    </g-button-group>
   </div>
 
 <!--<script src="./node_modules/vue/dist/vue.min.js"></script>-->
