--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <span>Vue</span>
     </g-button>
 
-    <g-button icon="settings" icon-position="up" :loading="loading2" @click="loading2 = !loading2">
+    <g-button icon="settings" icon-position="left" :loading="loading2" @click="loading2 = !loading2">
       <span>React</span>
     </g-button>
 
@@ -83,11 +83,16 @@
     </g-button-group>
 
     <g-button-group>
-      <div><g-button icon="left">上一页</g-button></div>
+      <!--<div><g-button icon="left">上一页</g-button></div>-->
+      <g-button icon="left">上一页</g-button>
       <g-button>更多</g-button>
       <g-button icon="right" icon-position="right">下一页</g-button>
     </g-button-group>
   </div>
+
+  <!--测试标签-->
+  <div id="test"></div>
+  <div id="test1"></div>
 
 <!--<script src="./node_modules/vue/dist/vue.min.js"></script>-->
 <!--<script src="./button.js"></script>-->
@@ -96,7 +101,6 @@
 <!--    el: '#app'-->
 <!--  })-->
 <!--</script>-->
-
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1775194_vvoqurnvom8.js"></script>
 </body>
